Refactor BossManager to use one-line boss registration (#3407)
Additionally create SerializedLocationBossAbilityGroup to reduce duplicated code in many bosses. Also various cleanup in boss abilities. Recommended to review with whitespace off. I can handle all merge conflicts from this commit