@@ -6,8 +6,6 @@ import com.playmonumenta.plugins.bosses.parameters.ParticlesList;
 import com.playmonumenta.plugins.bosses.parameters.SoundsList;
 import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.bosses.spells.SpellBarrier;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.Location;
 import org.bukkit.entity.LivingEntity;
@@ -37,23 +35,19 @@ public class BarrierBoss extends BossAbilityGroup {
 		public SoundsList SOUND_BREAK = SoundsList.fromString("[(ITEM_SHIELD_BREAK,1,1)]");
 	}
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new BarrierBoss(plugin, boss);
-	}
-
 	public BarrierBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
 		Parameters p = BossParameters.getParameters(boss, identityTag, new Parameters());
 
-		List<Spell> passives = new ArrayList<>(Arrays.asList(new SpellBarrier(plugin, boss, p.DETECTION, p.COOLDOWN, p.HITS_TO_BREAK, p.IS_CARAPACE,
+		List<Spell> passives = List.of(new SpellBarrier(plugin, boss, p.DETECTION, p.COOLDOWN, p.HITS_TO_BREAK, p.IS_CARAPACE,
 			(Location loc) -> {
 				p.SOUND_REFRESH.play(loc);
 			}, (Location loc) -> {
 			p.PARTICLE.spawn(boss, loc, 0, 1, 0);
 		}, (Location loc) -> {
 			p.SOUND_BREAK.play(loc);
-		})));
+		}));
 		super.constructBoss(SpellManager.EMPTY, passives, p.DETECTION, null);
 	}
 
