@@ -3,9 +3,8 @@ package com.playmonumenta.plugins.bosses.bosses;
 import com.playmonumenta.plugins.bosses.SpellManager;
 import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.bosses.spells.SpellRunAction;
+import com.playmonumenta.plugins.utils.BossUtils;
 import com.playmonumenta.plugins.utils.EntityUtils;
-import com.playmonumenta.plugins.utils.ScoreboardUtils;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.plugin.Plugin;
@@ -18,24 +17,12 @@ public class BlueWaterBoss extends BossAbilityGroup {
 
 	private int mBlueTimeOfDay = 0;
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new BlueWaterBoss(plugin, boss);
-	}
-
 	public BlueWaterBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
-		if (ScoreboardUtils.getScoreboardValue("$IsDungeon", "const").orElse(0) == 1) {
-			long time = boss.getWorld().getTime();
-			mBlueTimeOfDay = (int) Math.floor(time / 6000.0);
+		mBlueTimeOfDay = BossUtils.getBlueTimeOfDay(boss);
 
-			// Pretty sure Time ranges from 0 to 23999, but just in case...
-			if (mBlueTimeOfDay > 3) {
-				mBlueTimeOfDay = 3;
-			}
-		}
-
-		List<Spell> passiveSpells = Arrays.asList(
+		List<Spell> passiveSpells = List.of(
 			new SpellRunAction(() -> {
 				if (!mBoss.isDead() && mBlueTimeOfDay > 0) {
 					mBoss.setHealth(Math.min(mBoss.getHealth() + REGEN_HEAL[mBlueTimeOfDay], EntityUtils.getMaxHealth(mBoss)));
