@@ -6,7 +6,6 @@ import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.effects.Effect;
 import com.playmonumenta.plugins.effects.PercentSpeed;
 import com.playmonumenta.plugins.events.CustomEffectApplyEvent;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.plugin.Plugin;
@@ -15,14 +14,10 @@ public class CrowdControlImmunityBoss extends BossAbilityGroup {
 	public static final String identityTag = "boss_ccimmune";
 	public static final int detectionRange = 45;
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new CrowdControlImmunityBoss(plugin, boss);
-	}
-
 	public CrowdControlImmunityBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
-		List<Spell> passiveSpells = Arrays.asList(
+		List<Spell> passiveSpells = List.of(
 			new CrowdControlImmunity(boss)
 		);
 
