@@ -3,7 +3,6 @@ package com.playmonumenta.plugins.bosses.bosses;
 import com.playmonumenta.plugins.bosses.SpellManager;
 import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.bosses.spells.SpellCrowdControlClear;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.plugin.Plugin;
@@ -18,17 +17,12 @@ public class CrowdControlResistanceBoss extends BossAbilityGroup {
 	}
 
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new CrowdControlResistanceBoss(plugin, boss);
-	}
-
-
 	public CrowdControlResistanceBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
 		Parameters p = BossParameters.getParameters(boss, identityTag, new Parameters());
 
-		List<Spell> passive = Arrays.asList(new SpellCrowdControlClear(boss, p.CLEAR_TIME));
+		List<Spell> passive = List.of(new SpellCrowdControlClear(boss, p.CLEAR_TIME));
 
 		super.constructBoss(SpellManager.EMPTY, passive, p.DETECTION, null);
 	}
