@@ -3,7 +3,6 @@ package com.playmonumenta.plugins.bosses.bosses;
 import com.playmonumenta.plugins.bosses.SpellManager;
 import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.bosses.spells.SpellMobEffect;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.plugin.Plugin;
@@ -14,14 +13,10 @@ public final class HungerCloudBoss extends BossAbilityGroup {
 	public static final String identityTag = "boss_hungercloud";
 	public static final int detectionRange = 100;
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new HungerCloudBoss(plugin, boss);
-	}
-
 	public HungerCloudBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
-		List<Spell> passiveSpells = Arrays.asList(
+		List<Spell> passiveSpells = List.of(
 			new SpellMobEffect(boss, new PotionEffect(PotionEffectType.HUNGER, 600, 99, false, false))
 		);
 
