@@ -6,7 +6,6 @@ import com.playmonumenta.plugins.bosses.spells.SpellDelayedAction;
 import com.playmonumenta.plugins.bosses.spells.SpellRunAction;
 import com.playmonumenta.plugins.integrations.LibraryOfSoulsIntegration;
 import com.playmonumenta.plugins.particle.PartialParticle;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.Location;
 import org.bukkit.Particle;
@@ -21,14 +20,10 @@ public class InfestedBoss extends BossAbilityGroup {
 	public static final String identityTag = "boss_infested";
 	public static final int detectionRange = 30;
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new InfestedBoss(plugin, boss);
-	}
-
 	public InfestedBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
-		List<Spell> passiveSpells = Arrays.asList(
+		List<Spell> passiveSpells = List.of(
 			new SpellRunAction(() -> new PartialParticle(Particle.VILLAGER_ANGRY, boss.getLocation(), 1, 0.2, 0.2, 0.2, 0).spawnAsEntityActive(boss))
 		);
 
