@@ -6,7 +6,6 @@ import com.playmonumenta.plugins.bosses.bosses.Lich;
 import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.bosses.spells.lich.undeadplayers.SpellLichCurse;
 import com.playmonumenta.plugins.events.DamageEvent;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Player;
@@ -16,14 +15,10 @@ public class LichCurseBoss extends BossAbilityGroup {
 	public static final String identityTag = "boss_lichcurse";
 	public static final int detectionRange = 55;
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new LichCurseBoss(plugin, boss);
-	}
-
 	public LichCurseBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
-		List<Spell> passiveSpells = Arrays.asList(
+		List<Spell> passiveSpells = List.of(
 			new SpellLichCurse(mBoss)
 		);
 
