@@ -4,7 +4,6 @@ import com.playmonumenta.plugins.bosses.SpellManager;
 import com.playmonumenta.plugins.bosses.bosses.BossAbilityGroup;
 import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.bosses.spells.lich.undeadplayers.SpellLichKeyGlow;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.plugin.Plugin;
@@ -13,14 +12,10 @@ public final class LichKeyGlowBoss extends BossAbilityGroup {
 	public static final String identityTag = "boss_lich_keyglow";
 	public static final int detectionRange = 55;
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new LichKeyGlowBoss(plugin, boss);
-	}
-
 	public LichKeyGlowBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
-		List<Spell> passiveSpells = Arrays.asList(
+		List<Spell> passiveSpells = List.of(
 			new SpellLichKeyGlow(mBoss)
 		);
 
