@@ -6,7 +6,6 @@ import com.playmonumenta.plugins.bosses.spells.CrowdControlImmunity;
 import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.bosses.spells.SpellBasePassiveAbility;
 import com.playmonumenta.plugins.bosses.spells.lich.undeadplayers.SpellMagmaShield;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.plugin.Plugin;
@@ -15,18 +14,14 @@ public class LichMageBoss extends BossAbilityGroup {
 	public static final String identityTag = "boss_lichmage";
 	public static final int detectionRange = 20;
 
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new LichMageBoss(plugin, boss);
-	}
-
 	public LichMageBoss(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
 
-		SpellManager activeSpells = new SpellManager(Arrays.asList(
+		SpellManager activeSpells = new SpellManager(List.of(
 			new SpellMagmaShield(plugin, mBoss)
 		));
 
-		List<Spell> passiveSpells = Arrays.asList(
+		List<Spell> passiveSpells = List.of(
 			new SpellBasePassiveAbility(20 * 4, new CrowdControlImmunity(mBoss))
 		);
 
