@@ -3,7 +3,6 @@ package com.playmonumenta.plugins.parrots;
 import com.playmonumenta.plugins.bosses.SpellManager;
 import com.playmonumenta.plugins.bosses.bosses.BossAbilityGroup;
 import com.playmonumenta.plugins.bosses.spells.Spell;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Parrot;
@@ -12,14 +11,9 @@ import org.bukkit.plugin.Plugin;
 public class RainbowParrot extends BossAbilityGroup {
 	public static final String identityTag = "RainbowParrot";
 
-
-	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
-		return new RainbowParrot(plugin, boss);
-	}
-
 	public RainbowParrot(Plugin plugin, LivingEntity boss) {
 		super(plugin, identityTag, boss);
-		List<Spell> passiveSpells = Arrays.asList(
+		List<Spell> passiveSpells = List.of(
 			new RainbowParrotPassive((Parrot) boss, 1)
 		);
 
